{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 74,
  "lineage": "48e62f38-aee6-2ccd-7128-3c3d68453d4e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_task_aws",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4c3eabb9e72650a",
            "arn": "arn:aws:ec2:eu-central-1:988323654900:instance/i-05e921e53ac1c4815",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_onlyread_profile",
            "id": "i-05e921e53ac1c4815",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088d57b10310081af",
            "private_dns": "ip-10-0-2-218.eu-central-1.compute.internal",
            "private_ip": "10.0.2.218",
            "public_ip": "3.127.219.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01d1febdadb82b50d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044d0a3cbda027f0f",
            "tags": {
              "Name": "linux",
              "Owner": "Kozulenko Volodymyr",
              "Project": "Terraform AWS task6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cdfe50895ba33c0e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_read_profile",
            "aws_iam_role.ec2_s3_access_role",
            "aws_security_group.my_web",
            "aws_subnet.eu-central-1a-private",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2_task_aws",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4c3eabb9e72650a",
            "arn": "arn:aws:ec2:eu-central-1:988323654900:instance/i-0a0a08d1890153e80",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_onlyread_profile",
            "id": "i-0a0a08d1890153e80",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06f6b2ff37aa3f249",
            "private_dns": "ip-192-168-1-150.eu-central-1.compute.internal",
            "private_ip": "192.168.1.150",
            "public_ip": "54.93.68.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0be75cf9bc36758d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a45dfd959c8551b",
            "tags": {
              "Name": "Nginx2",
              "Owner": "Kozulenko Volodymyr",
              "Project": "Terraform AWS task6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b483005dbc5e8d00"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_read_profile",
            "aws_iam_role.ec2_s3_access_role",
            "aws_security_group.my_web2",
            "aws_subnet.eu-central-1a-public-second",
            "aws_vpc.second"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_task_aws",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4c3eabb9e72650a",
            "arn": "arn:aws:ec2:eu-central-1:988323654900:instance/i-02f8d124156af2440",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_onlyread_profile",
            "id": "i-02f8d124156af2440",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d3851a34a865c57b",
            "private_dns": "ip-10-0-1-91.eu-central-1.compute.internal",
            "private_ip": "10.0.1.91",
            "public_ip": "3.120.174.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08bd5c74a6fd29226",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bbf1d5347619938",
            "tags": {
              "Name": "Nginx",
              "Owner": "Kozulenko Volodymyr",
              "Project": "Terraform AWS task6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cdfe50895ba33c0e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_read_profile",
            "aws_iam_role.ec2_s3_access_role",
            "aws_security_group.my_web",
            "aws_subnet.eu-central-1a-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00ec131f2a0cabd02",
            "owner_id": "988323654900",
            "tags": {
              "Name": "IGW for public subnet ,default VPC"
            },
            "vpc_id": "vpc-0453053d0cb4be500"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "second",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09c43853c6d4c946b",
            "owner_id": "988323654900",
            "tags": {
              "Name": "IGW for public subnet , second  VPC"
            },
            "vpc_id": "vpc-0ba99eda1cde164a3"
          },
          "dependencies": [
            "aws_vpc.second"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eu-central-1a-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-010d68b291bbce26d",
            "owner_id": "988323654900",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "192.168.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0602b65f248f7f8da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Routetable Private Subnet"
            },
            "vpc_id": "vpc-0453053d0cb4be500"
          },
          "dependencies": [
            "aws_vpc.default",
            "aws_vpc.second",
            "aws_vpc_peering_connection.bridge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eu-central-1a-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07efb116076573447",
            "owner_id": "988323654900",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ec131f2a0cabd02",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0602b65f248f7f8da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0453053d0cb4be500"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default",
            "aws_vpc.second",
            "aws_vpc_peering_connection.bridge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eu-central-1a-public-second",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ab95d05737f1350e",
            "owner_id": "988323654900",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c43853c6d4c946b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0602b65f248f7f8da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Second Route table Public Subnet for second VPC"
            },
            "vpc_id": "vpc-0ba99eda1cde164a3"
          },
          "dependencies": [
            "aws_internet_gateway.second",
            "aws_vpc.default",
            "aws_vpc.second",
            "aws_vpc_peering_connection.bridge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eu-central-1a-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3855f5d7cc49cd4",
            "route_table_id": "rtb-010d68b291bbce26d",
            "subnet_id": "subnet-044d0a3cbda027f0f"
          },
          "dependencies": [
            "aws_route_table.eu-central-1a-private",
            "aws_subnet.eu-central-1a-private",
            "aws_vpc.default",
            "aws_vpc.second",
            "aws_vpc_peering_connection.bridge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eu-central-1a-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d63e6ceaf74ba3e",
            "route_table_id": "rtb-07efb116076573447",
            "subnet_id": "subnet-05bbf1d5347619938"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.eu-central-1a-public",
            "aws_subnet.eu-central-1a-public",
            "aws_vpc.default",
            "aws_vpc.second",
            "aws_vpc_peering_connection.bridge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eu-central-1a-public-second",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021064dd36022c1f9",
            "route_table_id": "rtb-0ab95d05737f1350e",
            "subnet_id": "subnet-02a45dfd959c8551b"
          },
          "dependencies": [
            "aws_internet_gateway.second",
            "aws_route_table.eu-central-1a-public-second",
            "aws_subnet.eu-central-1a-public-second",
            "aws_vpc.default",
            "aws_vpc.second",
            "aws_vpc_peering_connection.bridge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988323654900:security-group/sg-0cdfe50895ba33c0e",
            "description": "SG for AWS task6",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdfe50895ba33c0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group for AWS task6",
            "name_prefix": null,
            "owner_id": "988323654900",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group for AWS task6",
              "Owner": "Kozulenko Volodymyr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0453053d0cb4be500"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_web2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988323654900:security-group/sg-0b483005dbc5e8d00",
            "description": "SG 2 for AWS task6",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b483005dbc5e8d00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group 2 for AWS task6",
            "name_prefix": null,
            "owner_id": "988323654900",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group for AWS task6",
              "Owner": "Kozulenko Volodymyr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba99eda1cde164a3"
          },
          "dependencies": [
            "aws_vpc.second"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eu-central-1a-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988323654900:subnet/subnet-044d0a3cbda027f0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-044d0a3cbda027f0f",
            "map_public_ip_on_launch": false,
            "owner_id": "988323654900",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0453053d0cb4be500"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eu-central-1a-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988323654900:subnet/subnet-05bbf1d5347619938",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05bbf1d5347619938",
            "map_public_ip_on_launch": false,
            "owner_id": "988323654900",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0453053d0cb4be500"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eu-central-1a-public-second",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988323654900:subnet/subnet-02a45dfd959c8551b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-02a45dfd959c8551b",
            "map_public_ip_on_launch": false,
            "owner_id": "988323654900",
            "tags": {
              "Name": "Second Public Subnet in Second VPC"
            },
            "vpc_id": "vpc-0ba99eda1cde164a3"
          },
          "dependencies": [
            "aws_vpc.second"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988323654900:vpc/vpc-0453053d0cb4be500",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0744c6ee88c3c89c8",
            "default_route_table_id": "rtb-08f0d8b8a770bf625",
            "default_security_group_id": "sg-00d9e2541948bf001",
            "dhcp_options_id": "dopt-a5a151cf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0453053d0cb4be500",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08f0d8b8a770bf625",
            "owner_id": "988323654900",
            "tags": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "second",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:988323654900:vpc/vpc-0ba99eda1cde164a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-07f26a4b8d0ee5a09",
            "default_route_table_id": "rtb-0195cb907e958a257",
            "default_security_group_id": "sg-01b82ed317422b3ab",
            "dhcp_options_id": "dopt-a5a151cf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ba99eda1cde164a3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0195cb907e958a257",
            "owner_id": "988323654900",
            "tags": {
              "Name": "second_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "bridge",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0602b65f248f7f8da",
            "peer_owner_id": "988323654900",
            "peer_region": "eu-central-1",
            "peer_vpc_id": "vpc-0453053d0cb4be500",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0ba99eda1cde164a3"
          },
          "dependencies": [
            "aws_vpc.default",
            "aws_vpc.second"
          ]
        }
      ]
    }
  ]
}